# speedsheet

./: .gitignore  Cargo.toml  Procfile  README.md  build.rs  package.json  test.sh  tsconfig.json  tslint.json
.circleci/: Dockerfile  Dockerfile.min  config.yml
scripts/: pre-push
src/: expr_parser.rustpeg  main.rs  sheet.rs  test.js  tests.rs  ts.rs
static/: package-lock.json  package.json  speedsheet.js  speedsheet.ts  test.js  tsconfig.json  tslint.json
templates/: index.hbs
ui/: package.json  test.js  tsconfig.json
