[package]
name = "speedsheet"
version = "0.0.0"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
license = "Apache-2.0"
description = "SpeedSheet. Like a spreadsheet. In fast."
readme = "README.md"
homepage = "https://github.com/hurryabit/speedsheet#readme"
repository = "https://github.com/hurryabit/speedsheet"
edition = "2018"
build = "build.rs"

[build-dependencies]
peg = "0.5.7"

[dependencies]
peg = "0.5.7"
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "json", "serve"]
